--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#7DDCA8"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,6 +15,7 @@
         android:text="@string/app_title"
         android:textAlignment="center"
         android:textAllCaps="true"
+        android:textColor="#323232"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +29,6 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
         android:layout_marginTop="12dp"
         android:autofillHints=""
         android:ems="10"
@@ -35,6 +36,8 @@
         android:hint="@string/noun"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColorHint="#1B5E20"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="DuplicateSpeakableTextCheck" />
@@ -50,6 +53,7 @@
         android:hint="@string/noun"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +70,7 @@
         android:hint="@string/noun"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,70 +81,76 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
         android:hint="@string/noun"
         android:inputType="textPersonName"
+        android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
         android:hint="@string/noun"
         android:inputType="textPersonName"
+        android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
 
     <EditText
         android:id="@+id/editTextTextPersonName6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
         android:hint="@string/noun"
         android:inputType="textPersonName"
+        android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
 
     <EditText
         android:id="@+id/editTextTextPersonName7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
         android:hint="@string/noun"
         android:inputType="textPersonName"
+        android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
 
     <EditText
         android:id="@+id/editTextTextPersonName8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
         android:hint="@string/noun"
         android:inputType="textPersonName"
+        android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,6 +161,7 @@
         android:layout_width="273dp"
         android:layout_height="60dp"
         android:fontFamily="casual"
+        android:onClick="goNext"
         android:text="@string/get_madlib"
         android:textAlignment="center"
         android:textSize="20sp"
