--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,9 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="CustomTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-
+        <item name="colorPrimary">@color/light_blue</item>
+        <item name="colorPrimaryVariant">@color/seafoam_green</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondaryVariant</item>
     </style>
 </resources>
