--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:autofillHints=""
+        android:backgroundTint="#7DDBA7"
         android:ems="10"
         android:fontFamily="casual"
         android:hint="@string/noun"
