--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:backgroundTint="#7DDBA7"
         android:ems="10"
         android:fontFamily="casual"
-        android:hint="@string/noun"
+        android:hint="@string/prof_name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColorHint="#1B5E20"
@@ -51,7 +51,7 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
-        android:hint="@string/noun"
+        android:hint="@string/app_idea"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColorHint="#1B5E20"
@@ -68,7 +68,7 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
-        android:hint="@string/noun"
+        android:hint="@string/adjective"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColorHint="#1B5E20"
@@ -85,7 +85,7 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
-        android:hint="@string/noun"
+        android:hint="@string/p_noun"
         android:inputType="textPersonName"
         android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
-        android:hint="@string/noun"
+        android:hint="@string/profession"
         android:inputType="textPersonName"
         android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,13 +117,14 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
-        android:hint="@string/noun"
+        android:hint="@string/verb"
         android:inputType="textPersonName"
         android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
+        tools:ignore="DuplicateSpeakableTextCheck" />
 
     <EditText
         android:id="@+id/editTextTextPersonName7"
@@ -149,7 +150,7 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="casual"
-        android:hint="@string/noun"
+        android:hint="@string/verb_ing"
         android:inputType="textPersonName"
         android:textColorHint="#1B5E20"
         app:layout_constraintEnd_toEndOf="parent"
